# mm

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  bootstrap.py  config.py  llm.py  main.py  models.py  orchestrator.py  schemas.py  store.py  utils.py
app/agents/: __init__.py  architecture.py  base.py  context_map.py  delivery.py  guard.py  intake.py  scaffold.py  test_designer.py
app/services/: __init__.py  project_writer.py  repo_analyzer.py  validators.py
app/static/: app.js  index.html  styles.css
docs/: architecture.md  mimo_application.md
tests/: test_orchestrator.py  test_project_writer.py
